--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Услуги — Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css" id="theme-link">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
@@ -16,6 +16,7 @@
       <nav class="nav">
         <a href="services.html" style="color:#2478e2; font-weight:700;">Услуги</a>
         <a href="about.html">О компании</a>
+        <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
@@ -26,48 +27,57 @@
       <h1>Наши услуги</h1>
       <p class="main-subtitle" style="margin-bottom:24px;">Полный спектр работ по откачке и прочистке канализации, диагностике и обслуживанию сетей.</p>
     </section>
-
-    <section class="service-list">
-      <div class="service-item">
+    <section class="services-list">
+      <div class="service-card">
+        <img src="emergency-cleaning.jpg" alt="Аварийная прочистка" class="service-img">
         <h3>Аварийная прочистка канализации</h3>
-        <img src="emergency-cleaning.jpg" alt="Аварийная прочистка" class="method-img">
-        <p>Быстрая и эффективная помощь при любых засорах. Используем механическую и гидродинамическую прочистку труб.</p>
+        <div class="service-overlay">
+          Быстрая и эффективная помощь при любых засорах. Механическая и гидродинамическая прочистка труб.
+        </div>
       </div>
-      <div class="service-item">
+      <div class="service-card">
+        <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="service-img">
         <h3>Гидродинамическая прочистка</h3>
-        <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="method-img">
-        <p>Вода под высоким давлением очищает трубы от наростов, жира и ржавчины. Безопасно для всех типов труб, долговременный эффект.</p>
+        <div class="service-overlay">
+          Очищаем трубы водой под давлением. Безопасно, эффективно и долговременно.
+        </div>
       </div>
-      <div class="service-item">
+      <div class="service-card">
+        <img src="mechanical.jpg" alt="Механическая прочистка" class="service-img">
         <h3>Механическая прочистка</h3>
-        <img src="mechanical.jpg" alt="Механическая прочистка" class="method-img">
-        <p>Удаляем сложные засоры тросом, специальными машинами и ручным инструментом. Эффективно даже при старых трубах и \"застарелых\" пробках.</p>
+        <div class="service-overlay">
+          Удаляем сложные засоры тросом и спецтехникой — даже в старых трубах.
+        </div>
       </div>
-      <div class="service-item">
+      <div class="service-card">
+        <img src="septic.jpg" alt="Откачка ям, септиков, биотуалетов" class="service-img">
         <h3>Откачка выгребных ям, септиков, биотуалетов</h3>
-        <img src="septic.jpg" alt="Откачка ям, септиков, биотуалетов" class="method-img">
-        <p>Быстро и аккуратно откачиваем любые объёмы — до 12 куб.м за выезд. Илосос, санитарная обработка, индивидуальный подход.</p>
+        <div class="service-overlay">
+          Откачиваем любые объёмы до 12 м³. Илосос, санитарная обработка, индивидуальный подход.
+        </div>
       </div>
-      <div class="service-item">
+      <div class="service-card">
+        <img src="video.jpg" alt="Видеоинспекция канализации" class="service-img">
         <h3>Видеоинспекция канализации</h3>
-        <img src="video.jpg" alt="Видеоинспекция канализации" class="method-img">
-        <p>Осмотр внутренних стенок труб с помощью видеокамеры — позволяет обнаружить любые проблемы и предотвратить аварии. После диагностики даём полный отчёт.</p>
+        <div class="service-overlay">
+          Осмотр труб камерой — выявляем любые проблемы, даём отчёт.
+        </div>
       </div>
-      <div class="service-item">
+      <div class="service-card">
+        <img src="search.jpg" alt="Поиск скрытых колодцев" class="service-img">
         <h3>Поиск скрытых колодцев</h3>
-        <img src="search.jpg" alt="Поиск скрытых колодцев" class="method-img">
-        <p>Находим скрытые колодцы и элементы канализации — для ремонта, обслуживания и предотвращения аварийных ситуаций.</p>
+        <div class="service-overlay">
+          Находим скрытые колодцы и элементы канализации — для ремонта и предотвращения аварий.
+        </div>
       </div>
-      <div class="service-item">
+      <div class="service-card">
+        <img src="service-org.jpg" alt="Обслуживание организаций по договору" class="service-img">
         <h3>Обслуживание организаций по договору</h3>
-        <img src="service-org.jpg" alt="Обслуживание организаций по договору" class="method-img">
-        <p>Регулярное сервисное обслуживание предприятий и юридических лиц. Официальные договора, вся документация, гарантия и отчётность.</p>
+        <div class="service-overlay">
+          Сервисное обслуживание юрлиц. Официальные договора, отчётность.
+        </div>
       </div>
     </section>
-
-    <div style="text-align:center; margin:38px 0 20px 0;">
-      <a href="contacts.html" class="cta">Оставить заявку</a>
-    </div>
   </main>
 
   <footer>
