--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
     <a class="cta" href="tel:+79022073636">Позвонить</a>
   </section>
 
-  <section class="main">
-    <div class="container">
-      <h2>Почему выбирают нас</h2>
-      <ul>
-        <li>Аварийный выезд 24/7</li>
-        <li>Гидродинамическая и механическая прочистка</li>
-        <li>Откачка септиков, ям, биотуалетов, колодцев</li>
-        <li>Видеоинспекция и поиск скрытых колодцев</li>
-        <li>Работаем с юр. и физ. лицами, нал/безнал</li>
-      </ul>
-    </div>
-  </section>
+  <section class="why-us">
+  <h2>Почему выбирают нас</h2>
+  <ul>
+    <li>🚚 <b>Аварийный выезд 24/7</b> — всегда готовы помочь в любой ситуации, включая выходные и праздничные дни.</li>
+    <li>💧 <b>Современное оборудование</b> — используем гидродинамические и механические установки, что обеспечивает быструю и аккуратную прочистку любых труб.</li>
+    <li>🗑️ <b>Полный спектр услуг</b> — откачка септиков, выгребных ям, биотуалетов и колодцев с соблюдением всех санитарных норм.</li>
+    <li>🔍 <b>Видеоинспекция труб</b> — профессиональное оборудование для поиска и диагностики скрытых проблем без разрушения.</li>
+    <li>📄 <b>Официальные договора</b> — работаем с физическими и юридическими лицами, прозрачные цены, безналичный и наличный расчет.</li>
+    <li>✅ <b>Гарантия и ответственность</b> — опытные специалисты, квалифицированный подход, гарантия качества на все работы.</li>
+  </ul>
+</section>
+
 
   <!-- Галерея техники -->
   <section class="gallery">
