--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Золотарь 58</title>
+  <title>Золотарь 58 — Ассенизатор Пенза, откачка, прочистка канализации</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Ассенизаторские услуги, аварийная откачка и прочистка канализации в Пензе и области 24/7. Современное оборудование. Круглосуточно.">
+  <meta property="og:title" content="Золотарь 58 — Ассенизатор Пенза">
+  <meta property="og:description" content="Откачка, прочистка канализации, профессиональные ассенизаторские услуги по Пензе и области 24/7.">
+  <meta property="og:image" content="logo.png">
+  <link rel="icon" type="image/png" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,31 +24,51 @@
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
+      <button class="burger" aria-label="Открыть меню">
+        <span></span>
+      </button>
     </div>
   </header>
-
   <section class="main-intro">
     <h1>Откачка и прочистка канализации 24/7</h1>
     <p class="main-subtitle">Работаем по Пензе и области. Современное оборудование, аварийный выезд, без выходных. Гарантия качества.</p>
     <a class="cta" href="tel:+79022073636">Позвонить</a>
   </section>
-
   <section class="why-us">
-  <h2>Почему выбирают нас</h2>
-  <ul>
-    <li>🚚 <b>Аварийный выезд 24/7</b> — всегда готовы помочь в любой ситуации, включая выходные и праздничные дни.</li>
-    <li>💧 <b>Современное оборудование</b> — используем гидродинамические и механические установки, что обеспечивает быструю и аккуратную прочистку любых труб.</li>
-    <li>🗑️ <b>Полный спектр услуг</b> — откачка септиков, выгребных ям, биотуалетов и колодцев с соблюдением всех санитарных норм.</li>
-    <li>🔍 <b>Видеоинспекция труб</b> — профессиональное оборудование для поиска и диагностики скрытых проблем без разрушения.</li>
-    <li>📄 <b>Официальные договора</b> — работаем с физическими и юридическими лицами, прозрачные цены, безналичный и наличный расчет.</li>
-    <li>✅ <b>Гарантия и ответственность</b> — опытные специалисты, квалифицированный подход, гарантия качества на все работы.</li>
-  </ul>
-</section>
-
+    <h2>Почему выбирают нас</h2>
+    <ul>
+      <li><span class="usp-icon">🚚</span><b>Быстрый выезд</b> — оперативная подача машины, 24/7 по Пензе и области.</li>
+      <li><span class="usp-icon">🛠️</span><b>Профессиональное оборудование</b> — гидродинамика, механика, видеоинспекция.</li>
+      <li><span class="usp-icon">💼</span><b>Работа с организациями</b> — заключаем официальные договоры, выдаём документы.</li>
+      <li><span class="usp-icon">💳</span><b>Удобная оплата</b> — наличные и безналичный расчет.</li>
+      <li><span class="usp-icon">✅</span><b>Гарантия</b> — вы всегда получаете честный результат и чистую систему!</li>
+    </ul>
+  </section>
+  <section>
+    <div class="reviews-iframe-container">
+      <iframe src="https://yandex.ru/maps-reviews-widget/886001?comments" width="100%" height="490" frameborder="0" style="border:0;" allowfullscreen></iframe>
+    </div>
+  </section>
   <footer>
     <div class="container">
-      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
+      <p class="footer-text">© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
+  <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const burger = document.querySelector('.burger');
+    const nav = document.querySelector('.nav');
+    burger.addEventListener('click', function () {
+      nav.classList.toggle('open');
+      burger.classList.toggle('active');
+    });
+    document.addEventListener('click', function (e) {
+      if (!burger.contains(e.target) && !nav.contains(e.target)) {
+        nav.classList.remove('open');
+        burger.classList.remove('active');
+      }
+    });
+  });
+  </script>
 </body>
 </html>
