--- a/index.html
+++ b/index.html
@@ -45,10 +45,21 @@
     </ul>
   </section>
   <section>
-    <div class="reviews-iframe-container">
-      <iframe src="https://yandex.ru/maps-reviews-widget/886001?comments" width="100%" height="490" frameborder="0" style="border:0;" allowfullscreen></iframe>
+  <div class="reviews-iframe-container" style="min-height:180px; display:flex; align-items:center; justify-content:center; flex-direction:column;">
+    <div style="font-size:1.2em; margin-bottom:14px; color:#234b82;">Отзывы наших клиентов</div>
+    <a
+      href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001"
+      target="_blank"
+      rel="noopener"
+      style="display:inline-block; background:#fff; border-radius:14px; box-shadow:0 2px 12px 0 rgba(0,54,126,.11); padding:13px 32px; font-size:1.12em; color:#0663ba; font-weight:600; text-decoration:none; transition:box-shadow 0.13s;"
+      >Читать отзывы на Яндекс.Услугах
+      <span style="font-size:1.2em; margin-left:5px;">→</span>
+    </a>
+    <div style="margin-top:10px; color:#5b7cae; font-size:0.99em;">
+      Реальные отзывы клиентов о нашей работе — на сервисе Яндекс.Услуги
     </div>
-  </section>
+  </div>
+</section>
   <footer>
     <div class="container">
       <p class="footer-text">© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
