--- a/licenses.html
+++ b/licenses.html
@@ -14,22 +14,24 @@
 </head>
 <body>
   <header class="header">
-    <div class="container header-flex">
-      <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
-        <span class="logo-title">Золотарь 58</span>
-      </a>
-      <nav class="nav">
-        <a href="services.html">Услуги</a>
-        <a href="about.html">О компании</a>
-        <a href="licenses.html" style="color:#2478e2; font-weight:700;">Сертификаты</a>
-        <a href="contacts.html">Контакты</a>
-      </nav>
-      <button class="burger" aria-label="Открыть меню">
-        <span></span>
-      </button>
-    </div>
-  </header>
+  <div class="container header-flex">
+    <a href="index.html" class="logo-link">
+      <img src="logo.png" class="logo-img" alt="Золотарь 58">
+      <span class="logo-title">Золотарь 58</span>
+    </a>
+    <!-- СЮДА! -->
+    <div class="header-title-mobile">Золотарь 58</div>
+    <nav class="nav">
+      <a href="services.html">Услуги</a>
+      <a href="about.html" style="color:#2478e2; font-weight:700;">О компании</a>
+      <a href="licenses.html">Сертификаты</a>
+      <a href="contacts.html">Контакты</a>
+    </nav>
+    <button class="burger" aria-label="Открыть меню">
+      <span></span>
+    </button>
+  </div>
+</header>
   <main>
     <section class="main-intro">
       <h1>Сертификаты и лицензии</h1>
