--- a/services.html
+++ b/services.html
@@ -14,24 +14,23 @@
 </head>
 <body>
   <header class="header">
-  <div class="container header-flex">
-    <a href="index.html" class="logo-link">
-      <img src="logo.png" class="logo-img" alt="Золотарь 58">
-      <span class="logo-title">Золотарь 58</span>
-    </a>
-    <!-- Кликабельный заголовок только для мобилы! -->
-    <a href="index.html" class="header-title-mobile">Золотарь 58</a>
-    <nav class="nav">
-      <a href="services.html">Услуги</a>
-      <a href="about.html">О компании</a>
-      <a href="licenses.html">Сертификаты</a>
-      <a href="contacts.html">Контакты</a>
-    </nav>
-    <button class="burger" aria-label="Открыть меню">
-      <span></span>
-    </button>
-  </div>
-</header>
+    <div class="container header-flex">
+      <a href="index.html" class="logo-link">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <span class="logo-title">Золотарь 58</span>
+      </a>
+      <a href="index.html" class="header-title-mobile">Золотарь 58</a>
+      <nav class="nav">
+        <a href="services.html">Услуги</a>
+        <a href="about.html">О компании</a>
+        <a href="licenses.html">Сертификаты</a>
+        <a href="contacts.html">Контакты</a>
+      </nav>
+      <button class="burger" aria-label="Открыть меню">
+        <span></span>
+      </button>
+    </div>
+  </header>
   <main>
     <section class="main-intro" style="margin-top:35px;">
       <h1>Наши услуги</h1>
@@ -74,6 +73,34 @@
         <p>Регулярное сервисное обслуживание предприятий. Официальные договора и отчётность.</p>
       </div>
     </section>
+
+    <!-- FAQ -->
+    <section class="faq-section">
+      <h2>Частые вопросы</h2>
+      <ul class="faq-list">
+        <li>
+          <span class="faq-q">Сколько стоит аварийная откачка?</span>
+          <span class="faq-a">Цена зависит от объёма работ и удалённости. Позвоните — проконсультируем бесплатно!</span>
+        </li>
+        <li>
+          <span class="faq-q">Сколько времени занимает выезд?</span>
+          <span class="faq-a">Обычно 30-60 минут по Пензе, оперативно приезжаем даже ночью.</span>
+        </li>
+        <li>
+          <span class="faq-q">Есть ли гарантия на услуги?</span>
+          <span class="faq-a">Да, на все работы действует гарантия. Мы всегда дорабатываем, если клиент недоволен.</span>
+        </li>
+        <li>
+          <span class="faq-q">Как оплатить?</span>
+          <span class="faq-a">Можно наличными, картой или по счёту для организаций.</span>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Стрелка "Вверх" -->
+    <button class="scroll-to-top" aria-label="Наверх" onclick="window.scrollTo({top:0,behavior:'smooth'});">
+      ↑
+    </button>
   </main>
   <footer>
     <div class="container">
@@ -94,6 +121,14 @@
         burger.classList.remove('active');
       }
     });
+
+    // Стрелка "Вверх"
+    const scrollBtn = document.querySelector('.scroll-to-top');
+    window.addEventListener('scroll', () => {
+      if(window.scrollY > 400) scrollBtn.style.opacity = '1';
+      else scrollBtn.style.opacity = '0';
+    });
+    scrollBtn.style.opacity = '0';
   });
   </script>
 </body>
