--- a/index.html
+++ b/index.html
@@ -9,34 +9,40 @@
   <meta property="og:description" content="Откачка, прочистка канализации, профессиональные ассенизаторские услуги по Пензе и области 24/7.">
   <meta property="og:image" content="logo.png">
   <link rel="icon" type="image/png" href="favicon.ico">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <header class="header">
-  <div class="container header-flex">
-    <a href="index.html" class="logo-link">
-      <img src="logo.png" class="logo-img" alt="Золотарь 58">
-      <span class="logo-title">Золотарь 58</span>
-    </a>
-    <!-- Кликабельный заголовок только для мобилы! -->
-    <a href="index.html" class="header-title-mobile">Золотарь 58</a>
-    <nav class="nav">
-      <a href="services.html">Услуги</a>
-      <a href="about.html">О компании</a>
-      <a href="licenses.html">Сертификаты</a>
-      <a href="contacts.html">Контакты</a>
-    </nav>
-    <button class="burger" aria-label="Открыть меню">
-      <span></span>
-    </button>
+  <header class="header">
+    <div class="container header-flex">
+      <a href="index.html" class="logo-link">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <span class="logo-title">Золотарь 58</span>
+      </a>
+      <a href="index.html" class="header-title-mobile">Золотарь 58</a>
+      <nav class="nav">
+        <a href="services.html">Услуги</a>
+        <a href="about.html">О компании</a>
+        <a href="licenses.html">Сертификаты</a>
+        <a href="contacts.html">Контакты</a>
+      </nav>
+      <button class="burger" aria-label="Открыть меню">
+        <span></span>
+      </button>
+    </div>
+  </header>
+
+  <!-- 6. Плашка “Работаем сейчас” (только мобилка) -->
+  <div class="working-now-bar">
+    <span style="margin-right: 8px;">💧</span> Работаем сейчас &nbsp;<span style="font-size:1.15em;">•</span>&nbsp; Пушанина 46а, Пенза
   </div>
-</header>
+
   <section class="main-intro">
     <h1>Откачка и прочистка канализации 24/7</h1>
     <p class="main-subtitle">Работаем по Пензе и области. Современное оборудование, аварийный выезд, без выходных. Гарантия качества.</p>
     <a class="cta" href="tel:+79022073636">Позвонить</a>
   </section>
+
   <section class="why-us">
     <h2>Почему выбирают нас</h2>
     <ul>
@@ -47,42 +53,77 @@
       <li><span class="usp-icon">✅</span><b>Гарантия</b> — вы всегда получаете честный результат и чистую систему!</li>
     </ul>
   </section>
+
+  <!-- 9. Слайдер отзывов с кнопкой на Яндекс.Услуги -->
   <section>
-  <div class="reviews-iframe-container" style="min-height:180px; display:flex; align-items:center; justify-content:center; flex-direction:column;">
-    <div style="font-size:1.2em; margin-bottom:14px; color:#234b82;">Отзывы наших клиентов</div>
-    <a
-      href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001"
-      target="_blank"
-      rel="noopener"
-      style="display:inline-block; background:#fff; border-radius:14px; box-shadow:0 2px 12px 0 rgba(0,54,126,.11); padding:13px 32px; font-size:1.12em; color:#0663ba; font-weight:600; text-decoration:none; transition:box-shadow 0.13s;"
-      >Читать отзывы на Яндекс.Услугах
-      <span style="font-size:1.2em; margin-left:5px;">→</span>
-    </a>
-    <div style="margin-top:10px; color:#5b7cae; font-size:0.99em;">
-      Реальные отзывы клиентов о нашей работе — на сервисе Яндекс.Услуги
+    <div class="reviews-slider">
+      <div class="reviews-title">Отзывы наших клиентов</div>
+      <div class="review-item active">
+        Всё понравилось, быстро приехали, всё сделали! Рекомендую.<div class="review-author">— Николай С.</div>
+      </div>
+      <div class="review-item">
+        Заказывал откачку септика. Приехали в течение часа, без нареканий.<div class="review-author">— Ирина Д.</div>
+      </div>
+      <div class="review-item">
+        Надёжная компания, обращаемся не первый раз. Спасибо!<div class="review-author">— Владимир М.</div>
+      </div>
+      <div class="slider-nav">
+        <button class="slider-dot active"></button>
+        <button class="slider-dot"></button>
+        <button class="slider-dot"></button>
+      </div>
+      <div class="reviews-yandex-link">
+        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener">
+          Все отзывы на Яндекс.Услугах <span style="font-size:1.2em;">→</span>
+        </a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+
+  <!-- 8. Плавающий футер -->
   <footer>
     <div class="container">
-      <p class="footer-text">© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
+      <p class="footer-text">© 2025 Золотарь 58 — ИП Зоткин А.И. | Адрес: г. Пенза, ул. Пушанина, 46а</p>
     </div>
   </footer>
+
   <script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const burger = document.querySelector('.burger');
-    const nav = document.querySelector('.nav');
-    burger.addEventListener('click', function () {
-      nav.classList.toggle('open');
-      burger.classList.toggle('active');
-    });
-    document.addEventListener('click', function (e) {
-      if (!burger.contains(e.target) && !nav.contains(e.target)) {
-        nav.classList.remove('open');
-        burger.classList.remove('active');
+    // Бургер меню
+    document.addEventListener("DOMContentLoaded", function () {
+      const burger = document.querySelector('.burger');
+      const nav = document.querySelector('.nav');
+      burger.addEventListener('click', function () {
+        nav.classList.toggle('open');
+        burger.classList.toggle('active');
+      });
+      document.addEventListener('click', function (e) {
+        if (!burger.contains(e.target) && !nav.contains(e.target)) {
+          nav.classList.remove('open');
+          burger.classList.remove('active');
+        }
+      });
+
+      // Слайдер отзывов
+      const reviews = document.querySelectorAll('.review-item');
+      const dots = document.querySelectorAll('.slider-dot');
+      let current = 0;
+      function showReview(idx) {
+        reviews.forEach((el, i) => {
+          el.classList.toggle('active', i === idx);
+          dots[i].classList.toggle('active', i === idx);
+        });
       }
+      dots.forEach((dot, i) => {
+        dot.addEventListener('click', () => {
+          current = i;
+          showReview(current);
+        });
+      });
+      setInterval(() => {
+        current = (current + 1) % reviews.length;
+        showReview(current);
+      }, 6000);
     });
-  });
   </script>
 </body>
 </html>
