--- a/index.html
+++ b/index.html
@@ -2,22 +2,43 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Золотарь 58 — Ассенизатор Пенза, откачка, прочистка канализации</title>
+  <title>Откачка канализации Пенза 24/7 | Ассенизатор Золотарь 58 — Прочистка труб, аварийная откачка</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Ассенизаторские услуги, аварийная откачка и прочистка канализации в Пензе и области 24/7. Современное оборудование. Круглосуточно.">
-  <meta property="og:title" content="Золотарь 58 — Ассенизатор Пенза">
-  <meta property="og:description" content="Откачка, прочистка канализации, профессиональные ассенизаторские услуги по Пензе и области 24/7.">
-  <meta property="og:image" content="logo.png">
+  <meta name="description" content="Профессиональная откачка канализации, септиков, выгребных ям. Прочистка труб и устранение засоров. Ассенизаторские услуги по Пензе и области 24/7. Круглосуточно.">
+  <meta name="keywords" content="откачка канализации пенза, ассенизатор пенза, откачка септика, аварийная откачка, чистка выгребных ям, каналопромывка, промывка канализации, прочистка труб, аварийная служба канализации, ассенизаторские услуги пенза, канализация пенза, откачка канализации круглосуточно, прочистка канализации пенза, вызов ассенизатора пенза, срочная откачка">
+  <meta property="og:title" content="Ассенизатор Пенза — Золотарь 58">
+  <meta property="og:description" content="Откачка канализации, прочистка труб, откачка септика и выгребных ям в Пензе и области. Круглосуточно, быстро, официально.">
+  <meta property="og:image" content="https://zolotar58.ru/logo.png">
+  <meta property="og:url" content="https://zolotar58.ru/">
+  <meta property="og:type" content="website">
   <link rel="icon" type="image/png" href="favicon.ico">
-  <link rel="canonical" href="https://zolotar58.ru/">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <!-- Микроразметка Schema.org для LocalBusiness -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Золотарь 58",
+    "image": "https://zolotar58.ru/logo.png",
+    "telephone": "+7-902-207-36-36",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "ул. Пушанина, 46а",
+      "addressLocality": "Пенза",
+      "addressCountry": "Россия"
+    },
+    "url": "https://zolotar58.ru/",
+    "openingHours": "24/7",
+    "description": "Откачка канализации, прочистка, ассенизаторские услуги, аварийная служба в Пензе и области. Официально. Быстро. Круглосуточно."
+  }
+  </script>
 </head>
 <body>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58 — Ассенизатор Пенза, откачка канализации" title="Ассенизатор Золотарь 58 в Пензе">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
@@ -27,7 +48,9 @@
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
-      <button class="burger" aria-label="Открыть меню"><span></span></button>
+      <button class="burger" aria-label="Открыть меню">
+        <span></span>
+      </button>
     </div>
   </header>
 
@@ -35,66 +58,124 @@
     <span style="margin-right: 8px;">💧</span> Работаем сейчас &nbsp;<span style="font-size:1.15em;">•</span>&nbsp; Пушанина 46а, Пенза
   </div>
 
-  <section class="main-intro">
-  <h1>Откачка и прочистка канализации 24/7</h1>
-  <p class="main-subtitle">Профессиональная команда. Оперативный выезд по Пензе и области. Современное оборудование. Гарантия результата.</p>
-  <a class="cta" href="tel:+79022073636">Позвонить</a>
-</section>
+  <main>
+    <h1>Откачка канализации и прочистка труб в Пензе 24/7</h1>
+    <h2>Ассенизаторские услуги: аварийная откачка, чистка септиков, промывка канализации</h2>
+    <p class="main-subtitle">
+      <b>Золотарь 58</b> — профессиональная откачка канализации, выгребных ям и септиков по Пензе и области. 
+      Современное оборудование, быстрый выезд <b>24/7</b>. Официально, без посредников, с гарантией результата.
+    </p>
+    <a class="cta" href="tel:+79022073636">Позвонить: +7-902-207-36-36</a>
 
-<div class="about-card">
-  <b>«Золотарь 58»</b> — сервис по аварийной откачке и прочистке канализации с честными ценами, работой без выходных и круглосуточной поддержкой.
-</div>
+    <!-- SEO блок Услуг -->
+    <section>
+      <h2>Наши услуги</h2>
+      <ul>
+        <li>Откачка канализации (Пенза и область)</li>
+        <li>Откачка и чистка септиков</li>
+        <li>Аварийная откачка выгребных ям</li>
+        <li>Прочистка и промывка труб</li>
+        <li>Гидродинамическая промывка канализации</li>
+        <li>Обслуживание частных домов, организаций и предприятий</li>
+        <li>Срочный выезд аварийной службы канализации</li>
+      </ul>
+    </section>
 
-  <section class="why-us">
-    <h2>Почему выбирают нас</h2>
-    <ul>
-      <li><span class="usp-icon">🚚</span><b>Быстрый выезд</b> — подача машины в течение часа, круглосуточно.</li>
-      <li><span class="usp-icon">🛠️</span><b>Современное оборудование</b> — чисто и безопасно.</li>
-      <li><span class="usp-icon">💼</span><b>Работаем официально</b> — договор, документы, чек.</li>
-      <li><span class="usp-icon">💳</span><b>Оплата удобным способом</b> — наличные или безнал.</li>
-      <li><span class="usp-icon">✅</span><b>Гарантия на все работы</b></li>
-    </ul>
-  </section>
+    <section class="why-us">
+      <h2>Почему выбирают нас</h2>
+      <ul>
+        <li><span class="usp-icon">🚚</span><b>Быстрый выезд</b> — оперативная подача машины, 24/7 по Пензе и области.</li>
+        <li><span class="usp-icon">🛠️</span><b>Профессиональное оборудование</b> — гидродинамика, механика, видеоинспекция.</li>
+        <li><span class="usp-icon">💼</span><b>Работа с организациями</b> — заключаем официальные договоры, выдаём документы.</li>
+        <li><span class="usp-icon">💳</span><b>Удобная оплата</b> — наличные и безналичный расчет.</li>
+        <li><span class="usp-icon">✅</span><b>Гарантия</b> — вы всегда получаете честный результат и чистую систему!</li>
+      </ul>
+    </section>
 
-  <section>
-    <div class="reviews-slider">
-      <div class="reviews-title">Отзывы наших клиентов</div>
-      <div class="review-item active">
-        <div class="review-stars"><span style="color:#ffc83d;">★★★★★</span></div>
-        Всё понравилось, быстро приехали, всё сделали! Рекомендую.
-        <div class="review-author">— Николай С.</div>
+    <!-- Слайдер отзывов с оценкой звёздами и ссылкой на Яндекс -->
+    <section>
+      <div class="reviews-slider">
+        <div class="reviews-title">Отзывы наших клиентов</div>
+        <div class="review-item active">
+          <div class="review-rating">
+            <span style="color: #FFC700;">★★★★★</span>
+          </div>
+          Всё понравилось, быстро приехали, всё сделали! Рекомендую.<div class="review-author">— Николай С.</div>
+        </div>
+        <div class="review-item">
+          <div class="review-rating">
+            <span style="color: #FFC700;">★★★★★</span>
+          </div>
+          Заказывал откачку септика. Приехали в течение часа, всё аккуратно.<div class="review-author">— Ирина Д.</div>
+        </div>
+        <div class="review-item">
+          <div class="review-rating">
+            <span style="color: #FFC700;">★★★★★</span>
+          </div>
+          Надёжная компания, обращаюсь не первый раз. Спасибо!<div class="review-author">— Владимир М.</div>
+        </div>
+        <div class="slider-nav">
+          <button class="slider-dot active"></button>
+          <button class="slider-dot"></button>
+          <button class="slider-dot"></button>
+        </div>
+        <div class="reviews-yandex-link">
+          <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener">
+            Все отзывы на Яндекс.Услугах <span style="font-size:1.2em;">→</span>
+          </a>
+        </div>
       </div>
-      <div class="review-item">
-        <div class="review-stars"><span style="color:#ffc83d;">★★★★★</span></div>
-        Заказывал откачку септика. Приехали в течение часа, без нареканий.
-        <div class="review-author">— Ирина Д.</div>
+    </section>
+
+    <!-- FAQ с ключевыми словами для SEO -->
+    <section class="faq-section">
+      <h2>Часто задаваемые вопросы</h2>
+      <ul class="faq-list">
+        <li>
+          <span class="faq-q">Сколько стоит откачка канализации?</span>
+          <span class="faq-a">Стоимость зависит от объёма и сложности. Позвоните для расчёта: <a href="tel:+79022073636">+7-902-207-36-36</a></span>
+        </li>
+        <li>
+          <span class="faq-q">Вызвать ассенизатора можно ночью или в выходные?</span>
+          <span class="faq-a">Да, мы работаем <b>24/7</b> без выходных и праздников!</span>
+        </li>
+        <li>
+          <span class="faq-q">Есть ли у вас лицензии и документы?</span>
+          <span class="faq-a">Да, предоставляем все официальные документы и отчёты для организаций.</span>
+        </li>
+        <li>
+          <span class="faq-q">Какие услуги кроме откачки канализации?</span>
+          <span class="faq-a">Также выполняем чистку и промывку труб, откачку септиков, устранение засоров.</span>
+        </li>
+      </ul>
+    </section>
+
+    <!-- Яндекс карта (SEO-friendly) -->
+    <section style="margin: 38px 0;">
+      <h2>Где мы работаем</h2>
+      <p><b>Ассенизатор Золотарь 58, Пенза, ул. Пушанина 46а</b></p>
+      <div style="position:relative;overflow:hidden; border-radius:18px; box-shadow:0 2px 12px rgba(0,54,126,.09); max-width:660px; margin:0 auto;">
+        <a href="https://yandex.ru/maps/org/zolotar_58/YEwYdgdnTEUHQFtpfX1yc31nYw==/?ll=45.007500%2C53.132147&z=16.67"
+          style="color:#eee;font-size:12px;position:absolute;top:0px; left:0;">Ассенизатор Пенза — Золотарь 58</a>
+        <iframe src="https://yandex.ru/map-widget/v1/?ll=45.007500%2C53.132147&z=16.67&mode=search&text=ассенизатор%20Пенза%20Пушанина%2046а"
+                width="100%" height="400" frameborder="1" allowfullscreen="true" style="position:relative;min-width:260px;"></iframe>
       </div>
-      <div class="review-item">
-        <div class="review-stars"><span style="color:#ffc83d;">★★★★★</span></div>
-        Надёжная компания, обращаемся не первый раз. Спасибо!
-        <div class="review-author">— Владимир М.</div>
-      </div>
-      <div class="slider-nav">
-        <button class="slider-dot active"></button>
-        <button class="slider-dot"></button>
-        <button class="slider-dot"></button>
-      </div>
-      <div class="reviews-yandex-link">
-        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener">
-          Все отзывы на Яндекс.Услугах <span style="font-size:1.2em;">→</span>
-        </a>
-      </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
   <footer>
     <div class="container">
-      <p class="footer-text">© 2025 Золотарь 58 — ИП Зоткин А.И. | Адрес: г. Пенза, ул. Пушанина, 46а</p>
+      <p class="footer-text">
+        © 2025 Золотарь 58 — ИП Зоткин А.И. | Ассенизатор в Пензе, ул. Пушанина, 46а<br>
+        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener">Отзывы Яндекс.Услуги</a> |
+        <a href="https://2gis.ru/penza/search/%D0%B0%D1%81%D1%81%D0%B5%D0%BD%D0%B8%D0%B7%D0%B0%D1%82%D0%BE%D1%80%20%D0%9F%D0%B5%D0%BD%D0%B7%D0%B0" target="_blank" rel="noopener">2ГИС</a> |
+        <a href="https://www.avito.ru/penza?q=ассенизатор" target="_blank" rel="noopener">Avito</a>
+      </p>
     </div>
   </footer>
 
   <script>
-    // Бургер и слайдер
+    // Бургер меню
     document.addEventListener("DOMContentLoaded", function () {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
@@ -109,7 +190,7 @@
         }
       });
 
-      // Отзывы-слайдер
+      // Слайдер отзывов
       const reviews = document.querySelectorAll('.review-item');
       const dots = document.querySelectorAll('.slider-dot');
       let current = 0;
